--- a/src/components/Comments/index.css
+++ b/src/components/Comments/index.css
@@ -15,10 +15,12 @@
   justify-content: space-around;
   width: 80vw;
 }
+
 .comments-card-container {
   display: flex;
   flex-direction: column;
 }
+
 .heading {
   color: #1e293b;
 }
@@ -59,6 +61,7 @@
   width: 280px;
   height: 350px;
 }
+
 .hr-line {
   color: #94a3b8;
   width: 60vw;
@@ -67,7 +70,7 @@
 .entered-comments-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+
   width: 60vw;
 }
 .comment-count-container {
@@ -90,4 +93,35 @@
   flex-direction: column;
   list-style-type: none;
   width: 64vw;
+  padding-left: 0px;
+}
+@media (max-width: 767px) {
+  .maincontainer {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+  }
+  .comments-img-card-container {
+    display: flex;
+    flex-direction: column;
+    width: 70vw;
+  }
+  .comments-card-container {
+    order: 1;
+  }
+  .img {
+    order: 0;
+    height: 150px;
+  }
+  .entered-comments-container {
+    width: 80vw;
+  }
+  .unorder {
+    width: 80vw;
+    padding-left: 0px;
+  }
+  .hr-line {
+    width: 80vw;
+  }
 }
